--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       animal,
       and mineral,<br>
       I am the very model of a modern Major-Gineral. </p>
-    <p> <i>For more info see the <a href=" https://en.wikipedia.org/wiki/Major-General's_Song"> Major-General's Song</a> page on Wikipedia.</i> </p>
+    <p> <i>For more info see the <a href=" https://en.wikipedia.org/wiki/Major-General's_Song" target="_blank"> Major-General's Song</a> page on Wikipedia.</i> </p>
 
   </body>
 
